# rust-webserver-example

./: .gitignore  Cargo.toml  Dockerfile  README.md
migrations/: 20211231125524_users.sql  20220101082100_movies.sql
src/: authentication.rs  database.rs  lib.rs  main.rs  server.rs  settings.rs
src/infrastructure/adapters/movie/: mod.rs  moviedb_adapter.rs
src/infrastructure/adapters/user/: postgres_adapter.rs
src/libs/: mod.rs
src/libs/bus/: command_bus.rs  query_bus.rs
src/libs/ddd/domain/: mod.rs
src/libs/ddd/domain/base_traits/: command_handler_trait.rs  mod.rs  query_handler_trait.rs
src/libs/ddd/infrastructure/adapters/: mod.rs
src/modules/: mod.rs
src/modules/healthcheck/: mod.rs
src/modules/movie/: mod.rs
src/modules/movie/database/: mod.rs  port.rs  repository.rs
src/modules/movie/domain/entities/: mod.rs  movie_entity.rs
src/modules/movie/domain/value_objects/: mod.rs  title.rs
src/modules/movie/queries/: mod.rs
src/modules/user/: mod.rs  models.rs  routes.rs
src/modules/user/database/: port.rs  repository.rs
src/modules/user/queries/: mod.rs
terraform/: main.tf  outputs.tf  variables.tf
terraform/ec2/: main.tf  outputs.tf  variables.tf
terraform/ecr/: variables.tf
terraform/eip/: main.tf  outputs.tf  variables.tf
terraform/iam/: main.tf  outputs.tf  variables.tf
terraform/ps/: main.tf  variables.tf
terraform/rds/: main.tf  outputs.tf  variables.tf
terraform/s3/: main.tf  variables.tf
terraform/sg/: main.tf  outputs.tf  variables.tf
terraform/vpc/: main.tf  outputs.tf  variables.tf
tests/: healthcheck.rs
(+19 files in other folders)
