[package]
name = "netflux-service"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "netflux-service"

[dependencies]
actix-web = "4.0.0-beta.18"
sqlx = { version = "0.5.1", features = ["runtime-tokio-rustls" , "postgres", "uuid", "chrono", "migrate", "offline", "bigdecimal"] }
tokio = { version = "1.15.0", features = ["full"] }
serde = "1.0.132"
config = "0.11.0"
reqwest = "0.11.8"
uuid = { version = "0.8.2", features = ["v4", "serde"] }
chrono = { version = "0.4.19", features = ["serde"] }
argon2 = { version = "0.3.2", features = ["std"] }
tracing = { version = "0.1.29", features = ["log"] }
tracing-subscriber = { version = "0.3.5", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.1"
tracing-log = "0.1.2"
secrecy = { version = "0.8.0", features = ["serde"] }
tracing-actix-web = "0.5.0-beta.8"
serde-aux = "3.0.1"
log = "0.4.14"
unicode-segmentation = "1.8.0"
serde_json = "1.0.74"
async-trait = "0.1.52"
rand = { version = "0.8.4", features = ["std_rng"] }
anyhow = "1.0.52"
thiserror = "1.0.30"

[dev-dependencies]
claim = "0.5.0"
once_cell = "1.9.0"
